[package]
name = "big_totoro_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "8.3.0"
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.27.0", features = ["full"] }
axum = { version = "0.6.16", features = ["headers"] }
anyhow = "1.0.70"
serde_json = "1.0.96"
chrono = "0.4.24"
dotenv = "0.15.0"
etcd-client = "0.10.4"
local-ip-address = "0.5.1"
rs-snowflake = "0.6.0"
tonic = "0.9.2"

[build-dependencies]
tonic-build = "0.9.2"
