[package]
name = "big_totoro_ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
axum = { version = "0.6.16", features = ["ws"] }
big_totoro_core = { path = "../big_totoro_core" }
futures = "0.3.28"
